# ElephantNote

./: .dockerignore  .gitignore  .npmrc  ADDON_CATALOG.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  addon-catalog-rust-tests.txt  addon-catalog-validation.txt  addon-extraction-tests.txt  android-followup-source-diagnosis.txt  build_dev.sh  build_dev_apk.sh  catalog.json  critical-flow-diagnostic.txt  electron-builder.yml  electron.vite.config.js  eslint-output.txt  eslint.config.js  focused-migration-tests.txt  jsconfig.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preserved-branches.txt  remaining-branches.tsv  security-guardrails-report.json  vite.tauri.config.js  vite.tauri.config.mjs  vitest.config.js  vitest.critical.config.js
.github/: CONTRIBUTING.md  (+43 more)
Elephant/backend/knowledge-core/: Cargo.toml  README.md
Elephant/backend/knowledge-core/src/: actions.rs  chat_action_storage.rs  chat_actions.rs  chunking.rs  extraction.rs  graph.rs  lib.rs  model.rs  pipeline.rs  relation_extraction.rs  relation_storage.rs  relations.rs  storage.rs  taxonomy.rs  taxonomy_storage.rs  wiki_core.rs  wiki_graph_projection.rs  wiki_storage.rs
Elephant/backend/tauri/: .wiki-metadata-refresh-trigger  ARCHITECTURE.md  Cargo.toml  Info.plist  build.rs  coverage.sh  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
Elephant/backend/tauri-plugin-elephant-android-vault/: Cargo.toml  build.rs
Elephant/backend/tauri-plugin-elephant-android-vault/android/: .gitignore  build.gradle.kts
Elephant/backend/tauri-plugin-elephant-android-vault/src/: desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
Elephant/backend/tauri/capabilities/: default.json  window-dragging.json
Elephant/backend/tauri/src/: acceptance_server.rs  addon_assets.rs  addon_catalog.rs  addon_dependencies.rs  addon_http_access.rs  addon_note_access.rs  addon_official_packages.rs  addon_registry_view.rs  addon_runtime_access.rs  addon_services.rs  addon_sidecars.rs  addons.rs  ai_runtime.rs  android_vault_commands.rs  atomic_features.rs  buffer_store.rs  chat_runtime.rs  code_execution.rs  code_execution_custom.rs  code_execution_v2.rs  core_commands.rs  data_center.rs  debug_commands.rs  drawing_domain.rs  embedded_addon_services.rs  embeddings.rs  filesystem.rs  folder_domain.rs  fts.rs  infra.rs  keybindings.rs  knowledge.rs  knowledge_chat_actions.rs  knowledge_core_contract_tests.rs  knowledge_embeddings.rs  knowledge_relations.rs  knowledge_wiki_discovery.rs  knowledge_wiki_library.rs  knowledge_wikis.rs  lib_min.rs  (+30 more)
Elephant/backend/tauri/src/chat_runtime/: codex_app_server.rs
Elephant/backend/tauri/src/knowledge_chat_actions/: hybrid_search.rs
Elephant/backend/tauri/src/knowledge_wiki_discovery/: engine.rs  topic_graph.rs
Elephant/backend/tauri/src/markdown/: commands.rs  commands_contract.rs  compat_extra_tests.rs  deterministic_parity_basic_tests.rs  deterministic_parity_render_tests.rs  editor_parity_tests.rs  mod.rs  muya_advanced.rs  muya_assets.rs  muya_clipboard.rs  muya_clipboard_commands.rs  muya_clipboard_html.rs  muya_compat.rs  muya_complete.rs  muya_composition_transaction_tests.rs  muya_deterministic.rs  muya_edge_parity_tests.rs  muya_edges.rs  muya_engine.rs  muya_extras.rs  muya_frontmatter.rs  muya_grouped_history_tests.rs  muya_inline.rs  muya_interactions.rs  muya_json_state_parity_tests.rs  muya_navigation.rs  muya_parity.rs  muya_real_surface_sync_tests.rs  muya_session.rs  muya_shared_parity_tests.rs  muya_snapshot_basic_tests.rs  muya_snapshot_render_tests.rs  muya_state.rs  muya_surface.rs  muya_ui.rs  parity_tests.rs  parser_v2.rs  parser_v4.rs  renderer.rs  renderer_v2.rs  (+1 more)
Elephant/backend/tauri/tests/: model_library_contract.rs
Elephant/crates/muya-core/: ARCHITECTURE.md  Cargo.toml
Elephant/crates/muya-core/src/: lib.rs
Elephant/crates/muya-core/tests/: muya_mark_protocol.rs
Elephant/crates/muya-wasm/: Cargo.toml
Elephant/crates/muya-wasm/src/: lib.rs
addons/official/codex-connection/native/: Cargo.toml
addons/official/knowledge/native/: Cargo.toml
addons/official/open-models/native/: Cargo.toml
addons/official/sync/native/: Cargo.toml
addons/sync/native/: Cargo.toml
addons/sync/native/src/: invite.rs  lib.rs  main.rs  manifest.rs  pairing.rs  plan.rs  session.rs  transfer.rs
addons/sync/native/tests/: protocol_contract.rs  two_endpoint_sync.rs
blinko-offline/app/src-tauri/: Cargo.toml  tauri.conf.json
blinko-offline/app/src-tauri/capabilities/: default.json  desktop.json  mobile.json
blinko-offline/app/src-tauri/migrations/: 0001_init.sql  0002_share_fields.sql
blinko-offline/app/src-tauri/src/: backup_commands.rs  lib.rs  local_analytics.rs  local_commands.rs
blinko-offline/app/src-tauri/tests/: fixtures_test.rs
src-tauri/: ARCHITECTURE.md  Cargo.toml  build.rs  coverage.sh  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: buffer_store.rs  chat_runtime.rs  chat_runtime_local.rs  core_module.rs  debug_commands.rs  drawing_domain.rs  embeddings.rs  filesystem.rs  keybindings.rs  lib.rs  lib_min.rs  local_llama_runtime.rs  model_library.rs  model_safety.rs  note_domain.rs  ollama.rs  path_utils.rs  pi_runtime.rs  platform_contract_tests.rs  preferences.rs  recents.rs  state.rs  sync_contract_tests.rs  sync_safety.rs  tauri_extra_commands.rs  vault.rs  vault_backend.rs  vault_layout.rs  vault_lib.rs  vault_min.rs
src-tauri/src/markdown/: commands.rs  commands_contract.rs  compat_extra_tests.rs  deterministic_parity_basic_tests.rs  deterministic_parity_render_tests.rs  editor_parity_tests.rs  mod.rs  muya_compat.rs  muya_deterministic.rs  muya_edge_parity_tests.rs  muya_extras.rs  muya_frontmatter.rs  muya_navigation.rs  muya_snapshot_basic_tests.rs  muya_snapshot_render_tests.rs  parity_tests.rs  parser.rs  parser_v2_extra_tests.rs  parser_v3.rs  parser_v4.rs  renderer.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/vault/: commands.rs  config.rs  entries.rs  metadata.rs  mod.rs  sync.rs
src-tauri/tests/: model_library_contract.rs
(+3247 files in other folders)
