[package]
name = "elephantnote-tauri"
version = "0.18.9"
description = "ElephantNote Tauri shell"
authors = ["Jocs <ransixi@gmail.com>"]
license = "MIT"
repository = "https://github.com/marktext/marktext"
edition = "2021"
rust-version = "1.77"

[lib]
path = "src/lib_min.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"

[features]
default = []
