[package]
name = "elephantnote-knowledge-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "MIT"
description = "Derived knowledge index and wiki orchestration for ElephantNote"

[dependencies]
blake3 = "1.8"
pulldown-cmark = "0.13"
rusqlite = { version = "0.32", features = ["bundled", "bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
