[package]
name = "tauri-plugin-elephant-android-vault"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-elephant-android-vault"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false }
thiserror = "2"
