[package]
name = "muya-core"
version = "0.1.0"
description = "DOM-independent Markdown document and editing core for Elephant"
license = "MIT"
edition = "2021"
rust-version = "1.91"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Extended grapheme clusters keep Backspace aligned with visible user input.
unicode-segmentation = "1"

[dev-dependencies]
pretty_assertions = "1"
