[package]
name = "muya-wasm"
version = "0.1.0"
description = "WebAssembly adapter for Elephant's DOM-independent Muya editor core"
license = "MIT"
edition = "2021"
rust-version = "1.91"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
muya-core = { path = "../muya-core" }
serde_json = "1"
wasm-bindgen = "=0.2.126"
