[package]
name = "elephant-sync-service"
version = "1.2.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "elephant-sync-service"
path = "src/main.rs"

[dependencies]
iroh = "1.0.2"
iroh-mdns-address-lookup = "0.4.0"
serde_json = "1"
tokio = { version = "1.49", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
