[package]
name = "elephant-codex-service"
version = "2.0.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "elephant-codex-service"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tokio = { version = "1.49", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
