[package]
name = "elephant-knowledge-service"
version = "1.0.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "elephant-knowledge-service"
path = "src/main.rs"

[dependencies]
elephantnote-knowledge-core = { path = "knowledge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
