[package]
name = "elephant-open-models-service"
version = "2.0.0"
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "elephant-open-models-service"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
urlencoding = "2"
