[package]
name = "elephant-sync-service"
version = "1.2.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "elephant-sync-service"
path = "src/main.rs"

[dependencies]
blake3 = "1"
iroh = "1.0.2"
iroh-mdns-address-lookup = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
